--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
